<resources>
    <string name="app_play">PLAY</string>
    <string name="app_name">My Application</string>
    <string name="app_credito">By</string>
    <string name="app_opcoes">Escolher</string>
    <string name="app_jogar">Ultima Jogada</string>
    <string name="app_player">Player</string>
    <string name="app_bot">Bot</string>
    <string name="app_venceu">Venceu</string>
    <string name="app_perdeu">Perdeu</string>
    <string name="app_empate">Empatou</string>
    <string name="app_resultado">Resultado</string>


</resources>
