<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_splash"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context=".PlayActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="Vitorias: "
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

        <TextView
            android:id="@+id/tvNumeroVitorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />


    </LinearLayout>
    <TextView
        android:id="@+id/tvOpcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="@string/app_opcoes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textSize="30sp" />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btAmarelo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/poke_amarelo" />

            <Button
                android:id="@+id/btAzul"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/poke_azul" />

            <Button
                android:id="@+id/btRosa"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/poke_rosa" />
        </LinearLayout>

    <TextView
        android:id="@+id/tvUltimaJogada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="20dp"
        android:text="@string/app_jogar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJogarPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_player"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />


        <TextView
            android:id="@+id/tvJogarBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_bot"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="0.5"
            android:id="@+id/ivJogadaPlayer"/>


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="0.5"
            android:id="@+id/ivJogadaBot"/>

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="3dp"
        android:text="@string/app_resultado"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        tools:text="@string/app_venceu"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />






</LinearLayout>